--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.26",
+    "lenis": "^1.3.17",
     "next": "16.1.0",
     "postcss": "^8.5.6",
     "react": "19.2.3",
